landing-page/style.css
html, body {
    margin: 0;
    padding: 0;
    width: 100%;

}

body {
    display: flex;
    flex-direction: column;
    font-family: 'Roboto';
    
}

.header {
    height: 42px;
    background: #1f2937;
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    padding: 0 128px;
    box-sizing: border-box;


}


.logo {
    color: #F9FAF8;
    font-size: 24px;

}

.links {
    display: flex;

}
.main-container {
    background: #1f2937;
    display: flex;
    padding-left: 128px;
    padding-right: 128px;
    padding-top: 100px;
    padding-bottom: 100px;
    justify-content: space-between;
}

.main {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 16px;

}
.hero {
    display: flex;
    flex: 1 1 auto;
    max-width: 400px;
    font-size: 48px;
    color: #F9FAF8;
    margin: 0;
}

.secondary {
    max-width: 400px;
    color: #E5E7EB;
    font-size: 18px;
}
.information {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 50px;
    font-size: 38px;
    color: #1f2937; 
    font-weight: 900;
}
.image-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
    max-width: 200px;
    margin-top: 25px;
}

.small-images {
    display: flex;
    gap: 25px;
    justify-content: center;
}

.subtext {
    max-width: 225px;
    padding-top: 20px;
    gap: 25px;
}

.quote-section {
    background-color: #E5E7EB;
    display: flex;
    flex-direction: column;
    gap: 5px;
    justify-content: center;
    align-items: center;
    padding-left: 128px;
    padding-right: 128px;
    padding-top: 100px;
    padding-bottom: 100px;
}
.quote {
    max-width: 820px;
    text-align:left;
    text-wrap: wrap;
    font-size: 36px;
    font-style: italic;
    font-weight: lighter;
    color: #1f2937;
}

.author {
    width: 600px;
    text-align: right;
    font-size: 18px;
    font-weight: bold;
}

.action-section {
    padding-left: 128px;
    padding-right: 128px;
    padding-top: 100px;
    padding-bottom: 100px;

}
.action-container {
    max-width: 850px;
    display: flex;
    padding: 30px 50px;
    justify-content: space-between;
    background-color: #3882f6;
    color: #E5E7EB;
    border-radius: 5px;
}



.main-button {
    border-radius: 5px;
    border-color: #3882f6;
    background-color: #3882f6;
    border-style: solid;
    color: #E5E7EB;
    font-weight: bold;
    height: 30px;
    width: 100px;
}

.action-button {
    border-radius: 5px;
    border-color: #E5E7EB;;
    background-color: #3882f6;
    border-style: solid;
    color: #E5E7EB;
    font-weight: bold;
    height: 30px;
    width: 100px;

}

footer {
    padding: 30px;
    background-color: #1f2937;
    color: #E5E7EB;
    text-align: center;
    font-size: small;
    font-weight: lighter;
}

li {
    margin: 0 16px;
}

ul {
    display: flex;
    list-style-type: none;
    margin: 0;
    padding: 0;
}

a {
    text-decoration: none;
    color: #E5E7EB;
    font-size: 18px;
}

#main-img {
    display: flex;
    flex: 1 1 auto;
    max-width: 400px;
    max-height: 250px;
    height: auto;
    width: auto;
}

.secondary-images {
    max-width: 200px;
    max-height: 200px;
    border-radius: 5px;
}
.subtext {
    text-align: center; /* Centers the text under each image */
    font-size: 14px; /* Adjust font size as needed */

}

